--- a/templates/generic_page.html
+++ b/templates/generic_page.html
@@ -41,10 +41,12 @@
 	<footer>
 		<p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard + 
 			<a href="https://engine.vichan.net/">vichan</a> + 
-			<a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} -
-		<br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
+			<a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> + 
+			<a href="https://github.com/27chan/bazukachan">Bazukachan</a> {{ config.version }} -
+	<br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
 		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
 		<br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017-2018 NPFchan</p>
+		<br><a href="https://github.com/27chan/bazukachan">27chan</a> Copyright &copy; 2014-2020 27chan</p>
 		{% for footer in config.footer %}<p class="unimportant" style="text-align:center;">{{ footer }}</p>{% endfor %}
 	</footer>
 	<script type="text/javascript">{% raw %}
