Fix responsive css in theme recent

--- a/templates/themes/recent/recent_fs.css
+++ b/templates/themes/recent/recent_fs.css
@@ -55,3 +55,15 @@ body {
 header div.subtitle, h1 {
     color: #888A8C;
 }
+
+@media screen and (max-width: 696px) {
+	.box-wrap {
+		overflow: visible;
+	}
+	.box {
+		width: 100%;
+	}
+	.box ul {
+		text-align: center;
+        }
+}
