--- a/templates/themes/basic/index.html
+++ b/templates/themes/basic/index.html
@@ -38,14 +38,17 @@
 	</div>
 	
 	<hr/>
-        <footer>
-                <p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard + 
-                        <a href="https://engine.vichan.net/">vichan</a> + 
-                        <a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} -
-                <br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
-		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
-		<br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017-2018 NPFchan</p>
-        </footer>
+		<footer>
+			<p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard + 
+				<a href="https://engine.vichan.net/">vichan</a> + 
+				<a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} + 
+				<a href="https://github.com/27chan/bazukachan">bazukachan</a> -
+		<br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
+			<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
+			<br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017-2018 NPFchan
+			<br><a href="https://github.com/27chan/bazukachan">27chan</a> Copyright &copy; 2014-2020 bazukachan</p>
+			{% for footer in config.footer %}<p class="unimportant" style="text-align:center;">{{ footer }}</p>{% endfor %}
+		</footer>
 </body>
 </html>
 {% endfilter %}
