--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -391,6 +391,17 @@ span.heading {
   font-weight: bold;
 }
 
+span.delicious {
+  background: linear-gradient(to right, #ff0000, #ffa600, #fff500, #06ff00, #00c9ff, #2300ff, #ff00fa, #ff0000);
+  background-size: 200% auto;
+  color: #000;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: heading 1s linear infinite;
+}
+
 span.spoiler {
   background: black;
   color: black;
