--- a/templates/mod/recent_posts.html
+++ b/templates/mod/recent_posts.html
@@ -1,4 +1,4 @@
-<script src="{{ config.additional_javascript_url }}js/mod/recent_posts.js"></script>
+<script src="{{ config.additional_javascript_url }}js/mod/recent-posts.js"></script>
 {% if not posts|count %}
 	<p style="text-align:center" class="unimportant">({% trans 'There are no active posts.' %})</p>
 {% else %}
