--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -395,6 +395,12 @@ span.heading {
   font-weight: bold;
 }
 
+span.detected {
+  background: #FAF8F8;
+  color: #3060A8;
+  padding: 0 1px;
+}
+
 span.delicious {
   background: linear-gradient(to right, #ff0000, #ffa600, #fff500, #06ff00, #00c9ff, #2300ff, #ff00fa, #ff0000);
   background-size: 200% auto;
