Effect in webm and mp4

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   background: #EEF2FF url('img/fade-blue.png') repeat-x 50% 0%;
   color: black;
-  font-family: arial,helvetica,sans-serif;
+  font-family: arial, helvetica, sans-serif;
   font-size: 10pt;
   margin: 0 4px;
   padding-left: 4px;
@@ -9,19 +9,19 @@ body {
 }
 
 .hidden {
-  display:none;
+  display: none;
 }
 
 .no-decoration {
   text-decoration: none;
 }
 
-a,a:visited {
+a, a:visited {
   text-decoration: underline;
   color: #34345C;
 }
 
-a:hover,.intro a.post_no:hover {
+a:hover, .intro a.post_no:hover {
   color: #ff0000;
 }
 
@@ -35,7 +35,7 @@ a.post_no {
   color: inherit;
 }
 
-.intro a.post_no,p.intro a.email,p.intro a.post_anchor {
+.intro a.post_no, p.intro a.email, p.intro a.post_anchor {
   margin: 0;
 }
 
@@ -51,7 +51,7 @@ a.post_no {
   display: inline;
 }
 
-.intro time,p.intro a.ip-link,p.intro a.capcode {
+.intro time, p.intro a.ip-link, p.intro a.capcode {
   direction: ltr;
   unicode-bidi: embed;
 }
@@ -71,12 +71,12 @@ h1 {
   font-family: tahoma, sans-serif;
   letter-spacing: -2px;
   font-size: 28px;
-  font-weight:bold;
+  font-weight: bold;
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-header div.subtitle,h1 {
+header div.subtitle, h1 {
   color: #AF0A0F;
   text-align: center;
 }
@@ -97,7 +97,7 @@ form table input {
   height: auto;
 }
 
-input[type="text"],input[type="password"],textarea {
+input[type="text"], input[type="password"], textarea {
   border: 1px solid #a9a9a9;
   text-indent: 0;
   text-shadow: none;
@@ -149,7 +149,7 @@ form table tr td div label {
   font-size: 10px;
 }
 
-.unimportant,.unimportant * {
+.unimportant, .unimportant * {
   font-size: 10px;
 }
 
@@ -171,6 +171,74 @@ p.fileinfo {
   margin: 0 0 0 20px;
 }
 
+.file[href$=".mp4"]::after {
+  font-family: "FontAwesome";
+  content: "\f04b";
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #000;
+  color: #fff;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  box-sizing: border-box;
+  font-size: 20px;
+  padding-left: 4px;
+  transform: translate(-50%, -50%);
+  opacity: .5;
+  box-shadow: 0 0 px #fff;
+  pointer-events: none;
+}
+
+.file[href$=".mp4"]:hover::after {
+  opacity: .7;
+}
+
+.file[href$=".mp4"] {
+  justify-content: center;
+  display: flex;
+  position: relative;
+  float: left;
+}
+
+.file[href$=".webm"]::after {
+  font-family: "FontAwesome";
+  content: "\f04b";
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: #000;
+  color: #fff;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  box-sizing: border-box;
+  font-size: 20px;
+  padding-left: 4px;
+  transform: translate(-50%, -50%);
+  opacity: .5;
+  box-shadow: 0 0 px #fff;
+  pointer-events: none;
+}
+
+.file[href$=".webm"]:hover::after {
+  opacity: .7;
+}
+
+.file[href$=".webm"] {
+  justify-content: center;
+  display: flex;
+  position: relative;
+  float: left;
+}
+
 div.post p.fileinfo {
   padding-left: 5px;
 }
@@ -184,7 +252,7 @@ div.banner {
   margin: 1em 0;
 }
 
-div.banner,div.banner a {
+div.banner, div.banner a {
   color: white;
 }
 
@@ -193,7 +261,7 @@ div.banner a:hover {
   text-decoration: none;
 }
 
-img.banner,img.board_image {
+img.banner, img.board_image {
   display: block;
   border: 1px solid #a9a9a9;
   margin: 12px auto 0 auto;
@@ -256,7 +324,7 @@ input.delete {
   font-weight: bold;
 }
 
-.intro span.capcode,p.intro a.capcode,p.intro a.nametag {
+.intro span.capcode, p.intro a.capcode, p.intro a.nametag {
   color: #F00000;
   margin-left: 0;
 }
@@ -329,7 +397,7 @@ span.ponkpink {
 }
 
 .rquote {
-	color: #E0727F;
+  color: #E0727F;
 }
 
 span.omitted {
@@ -370,7 +438,7 @@ div.ban {
   margin: 30px auto;
 }
 
-div.ban p,div.ban h2 {
+div.ban p, div.ban h2 {
   padding: 3px 7px;
 }
 
@@ -426,21 +494,25 @@ span.spoiler {
 
 .shadow-thread {
   filter: grayscale(20%) !important;
-  opacity: 0.7 !important; /* Real browsers */
-  filter: alpha(opacity = 70) !important; /* MSIE */
+  opacity: 0.7 !important;
+  /* Real browsers */
+  filter: alpha(opacity=70) !important;
+  /* MSIE */
 }
 
 .shadow-post {
   filter: grayscale(80%) !important;
-  opacity: 0.6 !important; /* Real browsers */
-  filter: alpha(opacity = 60) !important; /* MSIE */
+  opacity: 0.6 !important;
+  /* Real browsers */
+  filter: alpha(opacity=60) !important;
+  /* MSIE */
 }
 
 div.post.reply div.body span.spoiler a {
   color: black;
 }
 
-span.spoiler:hover,div.post.reply div.body span.spoiler:hover a {
+span.spoiler:hover, div.post.reply div.body span.spoiler:hover a {
   color: white;
 }
 
@@ -461,7 +533,7 @@ table.test {
   width: 100%;
 }
 
-table.test td,table.test th {
+table.test td, table.test th {
   text-align: left;
   padding: 5px;
 }
@@ -479,13 +551,13 @@ fieldset label {
 }
 
 div.pages {
-	color: #89A;
-	background: #D6DAF0;
-	display: inline-block;
-	padding: 8px;
-	margin: 8px 0 4px 0;
-	border-right: 1px solid #B7C5D9;
-	border-bottom: 1px solid #B7C5D9;
+  color: #89A;
+  background: #D6DAF0;
+  display: inline-block;
+  padding: 8px;
+  margin: 8px 0 4px 0;
+  border-right: 1px solid #B7C5D9;
+  border-bottom: 1px solid #B7C5D9;
 }
 
 div.pages.top {
@@ -556,7 +628,7 @@ table.modlog tr th {
   background: #98E;
 }
 
-td.minimal,th.minimal {
+td.minimal, th.minimal {
   width: 1%;
   white-space: nowrap;
 }
@@ -572,18 +644,21 @@ span.public_ban {
   font-weight: bold;
   margin-top: 15px;
 }
+
 span.public_warning {
-	display: block;
-	color: #0000FF;
-	font-weight: bold;
-	margin-top: 10px;
+  display: block;
+  color: #0000FF;
+  font-weight: bold;
+  margin-top: 10px;
 }
+
 span.public_bantz {
-	display: block;
-	color: #00FF00;
-	font-weight: bold;
-	margin-top: 10px;
+  display: block;
+  color: #00FF00;
+  font-weight: bold;
+  margin-top: 10px;
 }
+
 span.toolong {
   display: block;
   margin-top: 15px;
@@ -602,19 +677,25 @@ table.announcements {
   margin-right: auto;
   font-size: 0.8em;
 }
+
 table.announcements thead td {
   border-bottom: 1px solid rgb(63, 63, 63);
   border-bottom: 1px solid rgba(0, 0, 0, .4);
-  -webkit-background-clip: padding-box; /* for Safari */
-  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+  -webkit-background-clip: padding-box;
+  /* for Safari */
+  background-clip: padding-box;
+  /* for IE9+, Firefox 4+, Opera, Chrome */
 }
+
 table.announcements tbody {
   text-align: left;
 }
+
 table.announcements tbody td:first-child {
   text-align: right;
   vertical-align: top;
 }
+
 table.announcements tfoot td {
   text-align: right;
 }
@@ -627,32 +708,41 @@ table.announcements-list {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 table.announcements-list tr td, table.announcements-list tr th {
   border: 1px solid rgb(63, 63, 63);
   border: 1px solid rgba(0, 0, 0, .4);
-  -webkit-background-clip: padding-box; /* for Safari */
-  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+  -webkit-background-clip: padding-box;
+  /* for Safari */
+  background-clip: padding-box;
+  /* for IE9+, Firefox 4+, Opera, Chrome */
   padding: 3px;
 }
+
 table.announcements-list tr th {
   font-weight: bold;
   text-align: center;
 }
+
 table.announcements-list tbody {
   text-align: left;
   vertical-align: top;
   background: rgb(250, 250, 250);
   color: black;
 }
+
 table.announcements-list td:first-child, table.announcements-list th:first-child {
   text-align: center;
 }
+
 table.announcements-list tbody tr td:nth-child(4) :first-child {
   float: left;
 }
+
 table.announcements-list tbody tr td:nth-child(4) :last-child {
   float: right;
 }
+
 .announcementForm input[type=text] {
   box-sizing: border-box;
   width: 100%;
@@ -667,49 +757,47 @@ table.archive-list {
   border-spacing: 0;
   font-size: 0.8em;
 }
+
 table.archive-list tr td, table.archive-list tr th {
   border: 1px solid rgb(63, 63, 63);
   border: 1px solid rgba(0, 0, 0, .4);
-  -webkit-background-clip: padding-box; /* for Safari */
-  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+  -webkit-background-clip: padding-box;
+  /* for Safari */
+  background-clip: padding-box;
+  /* for IE9+, Firefox 4+, Opera, Chrome */
   padding: 3px;
 }
+
 table.archive-list tr th {
   font-weight: bold;
   text-align: center;
 }
+
 table.archive-list tbody {
   text-align: left;
   vertical-align: top;
   background: rgb(250, 250, 250);
   color: black;
 }
-table.archive-list tbody tr td:first-child{
+
+table.archive-list tbody tr td:first-child {
   text-align: right;
 }
+
 table.archive-list tbody tr td:nth-child(2) {
-    max-width: 100px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  max-width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-table.archive-list tbody tr td:nth-child(3),
-table.archive-list tbody tr td:nth-child(4),
-table.archive-list tbody tr td:nth-child(5){
+
+table.archive-list tbody tr td:nth-child(3), table.archive-list tbody tr td:nth-child(4), table.archive-list tbody tr td:nth-child(5) {
   text-align: center;
 }
+
 .archiveForm {
   margin-bottom: inherit !important;
 }
-
-
-
-
-
-
-
-
-
 
 table.mod.config-editor {
   font-size: 9pt;
@@ -753,7 +841,7 @@ table.mod.config-editor input[type="text"] {
   background: url('img/arrow.png') right center no-repeat;
 }
 
-.desktop-style .sub .sub:hover,.desktop-style .sub .sub.hover {
+.desktop-style .sub .sub:hover, .desktop-style .sub .sub.hover {
   display: inline;
   text-indent: 0;
   background: inherit;
@@ -782,7 +870,7 @@ table.mod.config-editor input[type="text"] {
 }
 
 #attention_bar:hover {
-  background-color: rgba(100%,100%,100%,0.2);
+  background-color: rgba(100%, 100%, 100%, 0.2);
 }
 
 .intro.thread-hidden {
@@ -811,8 +899,8 @@ pre {
   margin: auto;
   max-height: 150px;
   max-width: 200px;
-  box-shadow: 0 0 4px rgba(0,0,0,0.55);
-  border: 2px solid rgba(153,153,153,0);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.55);
+  border: 2px solid rgba(153, 153, 153, 0);
 }
 
 .theme-catalog div.thread {
@@ -829,8 +917,8 @@ pre {
   position: relative;
   font-size: 11px;
   max-height: 300px;
-  background: rgba(182,182,182,0.12);
-  border: 2px solid rgba(111,111,111,0.34);
+  background: rgba(182, 182, 182, 0.12);
+  border: 2px solid rgba(111, 111, 111, 0.34);
 }
 
 .theme-catalog div.thread strong {
@@ -853,7 +941,8 @@ pre {
 }
 
 .theme-catalog div.grid-size-vsmall {
-  min-width:90px; max-width: 90px;
+  min-width: 90px;
+  max-width: 90px;
   max-height: 148px;
 }
 
@@ -863,7 +952,8 @@ pre {
 }
 
 .theme-catalog div.grid-size-small {
-  min-width:140px; max-width: 140px;
+  min-width: 140px;
+  max-width: 140px;
   max-height: 192px;
 }
 
@@ -873,7 +963,8 @@ pre {
 }
 
 .theme-catalog div.grid-size-large {
-  min-width: 256px; max-width: 256px;
+  min-width: 256px;
+  max-width: 256px;
   max-height: 384px;
 }
 
@@ -886,13 +977,11 @@ pre {
   .theme-catalog ul#Grid {
     padding-left: 18px;
   }
-
   .theme-catalog div.thread {
     width: auto;
     margin-left: 0;
     margin-right: 0;
   }
-
   .theme-catalog div.threads {
     overflow: hidden;
   }
@@ -930,7 +1019,7 @@ pre {
   padding: 5px;
   display: table-cell;
   text-align: left;
-  border-top: 1px solid rgba(0,0,0,0.5);
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .cb-menuitem span.cb-uri {
@@ -1010,8 +1099,6 @@ pre {
   resize: both;
   overflow: auto;
 }
-
-
 
 #alert_div {
   width: 500px;
@@ -1105,140 +1192,144 @@ pre {
   -o-user-select: none;
   user-select: none;
 }
+
 .poster_id:hover {
   color: #800000!important;
 }
+
 .poster_id::before {
   content: " ID: ";
 }
 
 pre {
-/* Better code tags */
-  max-width:inherit;
-  word-wrap:normal;
-  overflow:auto;
+  /* Better code tags */
+  max-width: inherit;
+  word-wrap: normal;
+  overflow: auto;
   display: block!important;
-  font-size:9pt;
-  font-family:monospace;
+  font-size: 9pt;
+  font-family: monospace;
 }
 
 span.pln {
-  color:grey;
+  color: grey;
 }
-
 
 @media screen and (min-width: 768px) {
   .intro {
     clear: none;
   }
-
   div.post div.body {
     clear: none;
   }
 }
 
 .clearfix {
-	display: block;
-	clear: both;
-	visibility: hidden;
-	overflow: hidden;
-	
-	font-size: 0px;
-	line-height: 0px;
-	
-	box-sizing: border-box;
-	border: none;
-	height: 0;
-	margin: 0;
-	padding: 0;
-	width: 100%;
-	zoom: 1;
+  display: block;
+  clear: both;
+  visibility: hidden;
+  overflow: hidden;
+  font-size: 0px;
+  line-height: 0px;
+  box-sizing: border-box;
+  border: none;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  zoom: 1;
 }
 
 /* === SPECIFIC PAGES & FEATURES === */
 
 /* Board List */
+
 div.boardlist {
-	margin-top: 3px;
-	
-	color: #89A;
-	font-size: 9pt;
+  margin-top: 3px;
+  color: #89A;
+  font-size: 9pt;
 }
+
 div.boardlist.bottom {
-	margin-top: 12px;
-	clear: both;
+  margin-top: 12px;
+  clear: both;
 }
+
 div.boardlist a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 /* Threads */
+
 /* Thread Footer */
 
 #thread-interactions {
-	margin: 8px 0;
-	clear: both;
+  margin: 8px 0;
+  clear: both;
 }
+
 #thread-links {
-	float: left;
+  float: left;
 }
-#thread-links > a {
-	padding-left: none;
-	padding-right: 10px;
+
+#thread-links>a {
+  padding-left: none;
+  padding-right: 10px;
 }
+
 #thread-quick-reply {
-	display: none;
-	position: absolute;
-	left: 50%;
-	right: 50%;
-	text-align: center;
-	width: 100px;
-	margin-left: -50px;
+  display: none;
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  text-align: center;
+  width: 100px;
+  margin-left: -50px;
 }
+
 #thread_stats {
-	float: right;
+  float: right;
 }
 
 #post-moderation-fields {
-	float: right;
-	text-align: right;
-}
-#delete-fields {
-}
-#report-fields {
+  float: right;
+  text-align: right;
 }
 
+#delete-fields {}
 
+#report-fields {}
 
 /* threadwatcher */
 
 #watchlist {
-	display: none;
-	max-height: 250px;
-	overflow: auto;
-	border: 1px solid;
-	border-style: none solid solid none;
-	width: 50%;
-	margin: 0 auto;
-	margin-bottom: 10px;
+  display: none;
+  max-height: 250px;
+  overflow: auto;
+  border: 1px solid;
+  border-style: none solid solid none;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
 
 .watchlist-inner, .watchlist-controls {
-	margin: 0 auto;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	text-align: center;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 #watchlist-toggle, .watchThread, .watchlist-remove, #clearList, #clearGhosts {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 #youtube-size input {
-	width: 50px;
+  width: 50px;
 }
 
 /* File selector */
+
 .dropzone {
   color: #000;
   cursor: default;
@@ -1251,9 +1342,11 @@ div.boardlist a {
   background-color: rgba(200, 200, 200, 0.5);
   overflow-y: auto;
 }
+
 .dropzone-wrap {
   width: 100%;
 }
+
 .dropzone .file-hint {
   color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
@@ -1264,22 +1357,27 @@ div.boardlist a {
   transition: 0.2s;
   border: 2px dashed rgba(125, 125, 125, 0.4);
 }
+
 .file-hint:hover, .dropzone.dragover .file-hint {
   color: rgba(0, 0, 0, 1);
   border-color: rgba(125, 125, 125, 0.8);
 }
+
 .dropzone.dragover {
   background-color: rgba(200, 200, 200, 1);
 }
+
 .dropzone .file-thumbs {
   text-align: left;
   width: 100%;
 }
+
 .dropzone .tmb-container {
   padding: 3px;
   overflow-x: hidden;
   white-space: nowrap;
 }
+
 .dropzone .file-tmb {
   height: 40px;
   width: 70px;
@@ -1290,11 +1388,13 @@ div.boardlist a {
   background-size: cover;
   background-position: center;
 }
+
 .dropzone .file-tmb span {
   font-weight: 600;
   position: relative;
   top: 13px;
 }
+
 .dropzone .tmb-filename {
   display: inline-block;
   vertical-align: bottom;
@@ -1302,6 +1402,7 @@ div.boardlist a {
   position: relative;
   margin-left: 5px;
 }
+
 .dropzone .remove-btn {
   cursor: pointer;
   color: rgba(125, 125, 125, 0.5);
@@ -1312,6 +1413,7 @@ div.boardlist a {
   margin-right: 5px;
   font-size: 20px
 }
+
 .dropzone .remove-btn:hover {
   color: rgba(125, 125, 125, 1);
 }
@@ -1323,15 +1425,18 @@ div.boardlist a {
 }
 
 /* Fileboard */
+
 table.fileboard th, table.fileboard td {
   padding: 2px;
   text-align: center;
 }
+
 table.fileboard .intro a {
   margin-left: 0px;
 }
 
 /* Gallery view */
+
 #gallery_images {
   position: absolute;
   right: 0px;
@@ -1341,6 +1446,7 @@ table.fileboard .intro a {
   background-color: rgba(0, 0, 0, 0.4);
   overflow: auto;
 }
+
 #gallery_toolbar {
   position: absolute;
   right: 12%;
@@ -1350,13 +1456,16 @@ table.fileboard .intro a {
   background-color: rgba(0, 0, 0, 0.4);
   text-align: right;
 }
+
 #gallery_images img {
   width: 100%;
 }
+
 #gallery_toolbar a {
   font-size: 28px;
   padding-right: 5px;
 }
+
 #gallery_main {
   position: absolute;
   left: 0px;
@@ -1369,90 +1478,107 @@ table.fileboard .intro a {
 #gallery_images img {
   opacity: 0.6;
   -webkit-transition: all 0.5s;
-          transition: all 0.5s;
+  transition: all 0.5s;
 }
+
 #gallery_images img:hover, #gallery_images img.active {
   opacity: 1;
 }
+
 #gallery_images img.active {
-  -webkit-box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
-     -moz-box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
-          box-shadow: 0px 0px 29px 2px rgba(255,255,255,1);
+  -webkit-box-shadow: 0px 0px 29px 2px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 0px 29px 2px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 29px 2px rgba(255, 255, 255, 1);
   z-index: 1;
 }
+
 #gallery_main img, #gallery_main video {
   max-width: 100%;
   max-height: 100%;
   position: absolute;
 }
+
 .own_post {
-	font-style: italic;
-	font-weight: normal;
-	opacity: .666;
+  font-style: italic;
+  font-weight: normal;
+  opacity: .666;
 }
+
 div.mix {
-	display: inline-block;
+  display: inline-block;
 }
 
 /* Collapsed post area */
-#PostAreaToggle + span {
-	font-size: 22px;
-	font-weight: bold;
+
+#PostAreaToggle+span {
+  font-size: 22px;
+  font-weight: bold;
 }
-#PostAreaToggle + span > a > label {
-	cursor: pointer;
+
+#PostAreaToggle+span>a>label {
+  cursor: pointer;
 }
-#PostAreaToggle + span + div {
-	display: none;
+
+#PostAreaToggle+span+div {
+  display: none;
 }
-#PostAreaToggle:checked + span {
-	display: none;
+
+#PostAreaToggle:checked+span {
+  display: none;
 }
-#PostAreaToggle:checked + span + div {
-	display: inline-block;
+
+#PostAreaToggle:checked+span+div {
+  display: inline-block;
 }
+
 form[name="post"] {
   margin-bottom: 0em;
   text-align: center;
 }
-form[name="post"] > div {
-	margin-bottom: 1em;
+
+form[name="post"]>div {
+  margin-bottom: 1em;
 }
 
 /* Predefined reasons */
+
 .ReasonTableForm tr:first-child td {
   text-decoration: bold;
   background: #9988EE;
   font-weight: bold;
 }
+
 .ReasonTableForm tr td:first-child {
   text-align: right;
   padding-right: 10px;
   font-weight: bold;
 }
+
 .ReasonTableForm tr:hover td {
   cursor: pointer;
   background: #D6BAD0;
 }
 
-
 /* Archive hover */
+
 table.archive-list tr:hover td {
-   background-color: #D4D8EE;
+  background-color: #D4D8EE;
 }
 
 .embed_container {
-    display: block;
+  display: block;
 }
 
 .hover-show {
-    opacity: 0;
+  opacity: 0;
 }
+
 .hover-show:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 /* Corona */
+
 .corona {
   margin-bottom: 10px;
   font-weight: 700;
