--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,6 +8,6 @@
         <br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017-2018 NPFchan
         <br><a href="https://github.com/27chan/bazukachan">27chan</a> Copyright &copy; 2014-2020 bazukachan</p>
     {% for footer in config.footer %}<p class="unimportant" style="text-align:center;">{{ footer }}</p>{% endfor %}
-    <center><img src="/static/canario.png"></center>
+    <center><img width="5%" src="/static/canario.png"></center>
     {% for footer in config.canary %}<p class="unimportant" style="text-align:center; font-weight: 700;">{{ footer }}</p>{% endfor %}
 </footer>
