Fix name in footer

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard +
-        <a href="https://engine.vichan.net/">vichan1</a> +
+        <a href="https://engine.vichan.net/">vichan</a> +
         <a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} +
         <a href="https://github.com/27chan/bazukachan">bazukachan</a> -
         <br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group
