--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -223,6 +223,24 @@
 				{{ antibot.html() }}
 			</td>
 		</tr>{% endif %}
+		<tr>
+			<td colspan="2">
+				<p class="unimportant board-settings">
+				{% if not config.disable_images %}
+				{% trans %}Allowed file types:{% endtrans %}
+				{% if config.allowed_ext_op and not id %}
+					{{ config.allowed_ext_op|join(', ') }}
+				{% else %}
+					{{ config.allowed_ext|join(', ') }}{% if config.allowed_ext_files %}, {{ config.allowed_ext_files|join(', ') }}{% endif %}
+				{% endif %}<br />
+				{% trans %}Max filesize is{% endtrans %} {{ config.max_filesize|filesize }}.<br />
+				{% trans %}Max image dimensions are{% endtrans %} {{ config.max_height }} x {{ config.max_width }}.<br />
+				{% set max_images = config.max_images %} {# workaround for "The text to be translated with "trans" can only contain references to simple variables" #}
+				{% trans %}You may upload {{ max_images }} per post.{% endtrans %}<br />
+				{% endif %}
+				</p>
+			</td>
+		</tr>
 	</table>
 {{ antibot.html(true) }}
 <input type="hidden" name="hash" value="{{ antibot.hash() }}">
