--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -48,11 +48,6 @@
 				{% if not (not (config.field_disable_subject or (id and config.field_disable_reply_subject)) or (mod and post.mod|hasPermission(config.mod.bypass_field_disable, board.uri))) %}
 				<input accesskey="s" style="margin-left:2px;" type="submit" name="post" value="{% if id %}{{ config.button_reply }}{% else %}{{ config.button_newtopic }}{% endif %}" />{% if config.spoiler_images %} <input id="spoiler" name="spoiler" type="checkbox"> <label for="spoiler">{% trans %}Spoiler Image{% endtrans %}</label>				{% endif %}
 				{% endif %}
-				{% if config.poster_ids %}
-					{% if not id %}
-						{% if config.hide_poster_id_thread %}<input id="hideposterid" name="hideposterid" type="checkbox"> <label for="hideposterid">{% trans %}Hide Poster IDs in Thread{% endtrans %}</label>{% endif %}
-					{% endif %}
-				{% endif %}
 				{{ antibot.html() }}
 			</td>
 		</tr>{% endif %}
@@ -65,9 +60,6 @@
 			<td>
 				<input style="float:left;" type="text" name="subject" size="25" maxlength="100" autocomplete="off">
 				<input accesskey="s" style="margin-left:2px;" type="submit" name="post" value="{% if id %}{{ config.button_reply }}{% else %}{{ config.button_newtopic }}{% endif %}" />
-				{% if config.spoiler_images %}
-					<label><input id="spoiler" name="spoiler" type="checkbox">{% trans %}Spoiler Image{% endtrans %}</label>
-				{% endif %}
 			</td>
 		</tr>
 		{% endif %}
@@ -189,6 +181,22 @@
 				<input type="text" name="embed" value="" size="30" maxlength="120" autocomplete="off">
 			</td>
 		</tr>
+		<tr>
+                <th>
+                    {% trans %}Options{% endtrans %}
+                    {{ antibot.html() }}
+                </th>
+                <td>
+                    {% if config.spoiler_images %}
+                        <input id="spoiler" name="spoiler" type="checkbox"> <label for="spoiler">{% trans %}Spoiler Image{% endtrans %}</label>
+					{% endif %}
+					{% if config.poster_ids %}
+					{% if not id %}
+						{% if config.hide_poster_id_thread %}<input id="hideposterid" name="hideposterid" type="checkbox"> <label for="hideposterid">{% trans %}Hide Poster IDs in Thread{% endtrans %}</label>{% endif %}
+					{% endif %}
+				{% endif %}
+                </td>
+            </tr>
 		{% endif %}
 		{% if mod and ((not id and post.mod|hasPermission(config.mod.sticky, board.uri)) or (not id and post.mod|hasPermission(config.mod.lock, board.uri)) or post.mod|hasPermission(config.mod.rawhtml, board.uri)) %}
 		<tr>
@@ -225,20 +233,20 @@
 		</tr>{% endif %}
 		<tr>
 			<td colspan="2">
-				<p class="unimportant board-settings">
+				<ul class="unimportant board-settings">
 				{% if not config.disable_images %}
-				{% trans %}Allowed file types:{% endtrans %}
+				<li>{% trans %}Allowed file types: {% endtrans %}
 				{% if config.allowed_ext_op and not id %}
 					{{ config.allowed_ext_op|join(', ') }}
 				{% else %}
 					{{ config.allowed_ext|join(', ') }}{% if config.allowed_ext_files %}, {{ config.allowed_ext_files|join(', ') }}{% endif %}
-				{% endif %}<br />
-				{% trans %}Max filesize is{% endtrans %} {{ config.max_filesize|filesize }}.<br />
-				{% trans %}Max image dimensions are{% endtrans %} {{ config.max_height }} x {{ config.max_width }}.<br />
+				{% endif %}</li>
+				<li>{% trans %}Max filesize is{% endtrans %} {{ config.max_filesize|filesize }}.</li>
+				<li>{% trans %}Max image dimensions are{% endtrans %} {{ config.max_height }} x {{ config.max_width }}.<br />
 				{% set max_images = config.max_images %} {# workaround for "The text to be translated with "trans" can only contain references to simple variables" #}
-				{% trans %}You may upload {{ max_images }} per post.{% endtrans %}<br />
+				<li>{% trans %}You may upload {{ max_images }} per post.{% endtrans %}</li>
 				{% endif %}
-				</p>
+				</ul>
 			</td>
 		</tr>
 	</table>
