--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard +
         <a href="https://engine.vichan.net/">vichan</a> +
-        <a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} +
-        <a href="https://github.com/27chan/bazukachan">bazukachan</a> -
+        <a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> +
+        <a href="https://github.com/27chan/bazukachan">bazukachan</a> {{ config.version }} -
         <br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group
         <br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
         <br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017-2018 NPFchan
