--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1577,6 +1577,10 @@ table.archive-list tr:hover td {
   opacity: 1;
 }
 
+.ukkohide {
+  opacity: 1;
+}
+
 /* Corona */
 
 .corona {
@@ -1584,4 +1588,13 @@ table.archive-list tr:hover td {
   font-weight: 700;
   font-size: 15px;
   color: #af0a0f;
+}
+
+/* js/quick-reply.js */
+.quick-reply-btn {
+  right: 15px !important;
+  bottom: 5px !important;
+  background: #d6daf0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+  font-weight: bold;
 }
