--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -181,22 +181,24 @@
 				<input type="text" name="embed" value="" size="30" maxlength="120" autocomplete="off">
 			</td>
 		</tr>
+		{% endif %}
+		{% if (config.spoiler_images or config.hide_poster_id_thread)%}
 		<tr>
-                <th>
-                    {% trans %}Options{% endtrans %}
-                    {{ antibot.html() }}
-                </th>
-                <td>
-                    {% if config.spoiler_images %}
-                        <input id="spoiler" name="spoiler" type="checkbox"> <label for="spoiler">{% trans %}Spoiler Image{% endtrans %}</label>
-					{% endif %}
-					{% if config.poster_ids %}
-					{% if not id %}
-						{% if config.hide_poster_id_thread %}<input id="hideposterid" name="hideposterid" type="checkbox"> <label for="hideposterid">{% trans %}Hide Poster IDs in Thread{% endtrans %}</label>{% endif %}
-					{% endif %}
+			<th>
+				{% trans %}Options{% endtrans %}
+				{{ antibot.html() }}
+			</th>
+			<td>
+				{% if config.spoiler_images %}
+					<input id="spoiler" name="spoiler" type="checkbox"> <label for="spoiler">{% trans %}Spoiler Image{% endtrans %}</label>
 				{% endif %}
-                </td>
-            </tr>
+				{% if config.poster_ids %}
+				{% if not id %}
+					{% if config.hide_poster_id_thread %}<input id="hideposterid" name="hideposterid" type="checkbox"> <label for="hideposterid">{% trans %}Hide Poster IDs in Thread{% endtrans %}</label>{% endif %}
+				{% endif %}
+			{% endif %}
+			</td>
+		</tr>
 		{% endif %}
 		{% if mod and ((not id and post.mod|hasPermission(config.mod.sticky, board.uri)) or (not id and post.mod|hasPermission(config.mod.lock, board.uri)) or post.mod|hasPermission(config.mod.rawhtml, board.uri)) %}
 		<tr>
