Fix multiple upload images thumbs.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -156,6 +156,7 @@ form table tr td div label {
 .file {
   float: left;
   margin-right: 2px;
+  min-width: 200px;
 }
 
 .file:not(.multifile) .post-image {
