--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1599,3 +1599,16 @@ table.archive-list tr:hover td {
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   font-weight: bold;
 }
+
+.ReasonForm{
+  width: 100%;
+  text-align: center;
+}
+.ReasonForm h3{
+  width: 100%;
+}
+.ReasonTableForm{
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
